Fix issues with scrollbars not being hidden when they are not needed

--- a/app/styles/components/accountsettings.scss
+++ b/app/styles/components/accountsettings.scss
@@ -2,7 +2,7 @@
 .account-settings {
   max-height:calc(100%);
   height:calc(100%);
-  overflow-y:scroll;
+  overflow-y:auto;
   overflow-x:hidden;
   display: flex;
   flex-direction: column;
