--- a/app/styles/components/custom-components.scss
+++ b/app/styles/components/custom-components.scss
@@ -5,7 +5,7 @@
 
   label {
     display: block;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
   }
 
